--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -12,7 +12,7 @@
 
     
 </head>
-<body>
+<body >
     <div class="banner">
         <nav class="navbar ">
           <div class="container-fluid">
@@ -20,6 +20,10 @@
               <img src="{{BASE_DIR}}/img/22/CollegePreDictor.png " style="border-radius:15px;" alt="Logo" width="30" height="30" border="1" class="d-inline-block align-text-top">
               College Predictor
             </a>
+            <span class="navbar-text">
+            <a href="{% url 'rate' %}">Rate your college</a>
+            </span>
+
           </div>
         </nav>
         <div class="d-flex flex-column align-items-center m-5" >
@@ -56,72 +60,3 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
-
-<!-- {% for clg in cs_clgs %}
-            <div class="card mb-3 card_cont" style="width: 80%;background-color:#D8DFEE;">
-            <a href="/clg/{{clg.id}}">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="/{{BASE_DIR}}{{clg.Image}}" class="img-fluid card-image clg_img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body d-flex align-items-center" style="height:100%;">
-                  <h3 class="card-title text-center">{{clg.collage_name}}</h3>
-                  <p class="card-text"><small class="text-muted">CS</small><br><small class="text-muted">CS</small></p>
-                </div>
-              </div>
-              </div>
-            </a>
-            </div>
-          {% endfor %}
-          {% for clg in ecs_clgs %}
-            <div class="card mb-3 card_cont" style="width: 80%;background-color:#D8DFEE;">
-            <a href="/clg/{{clg.id}}">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="/{{BASE_DIR}}{{clg.Image}}" class="img-fluid card-image clg_img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body d-flex align-items-center" style="height:100%;">
-                  <h3 class="card-title text-center">{{clg.collage_name}}</h3>
-                  <p class="card-text"><small class="text-muted">ECS</small></p>
-                </div>
-              </div>
-              </div>
-            </a>
-            </div>
-          {% endfor %}
-          {% for clg in extc_clgs %}
-            <div class="card mb-3 card_cont" style="width: 80%;background-color:#D8DFEE;">
-              <a href="/clg/{{clg.id}}">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="/{{BASE_DIR}}{{clg.Image}}" class="img-fluid card-image clg_img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body d-flex align-items-center" style="height:100%;">
-                  <h3 class="card-title text-center">{{clg.collage_name}}</h3>
-                  <p class="card-text"><small class="text-muted">EXTC</small></p>
-                </div>
-              </div>
-              </div>
-              </a>
-            </div>
-          {% endfor %}
-          {% for clg in mech_clgs %}
-            <div class="card mb-3 card_cont" style="width: 80%;background-color:#D8DFEE;">
-            <a href="/clg/{{clg.id}}">
-            <div class="row g-0">
-              <div class="col-md-4">
-                <img src="/{{BASE_DIR}}{{clg.Image}}" class="img-fluid card-image clg_img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body d-flex align-items-center" style="height:100%;">
-                  <h3 class="card-title text-center">{{clg.collage_name}}</h3>
-                  <p class="card-text"><small class="text-muted">MECH</small></p>
-                </div>
-              </div>
-              </div>
-            </a>
-            </div>
-          {% endfor %} -->
